Move all dashboard snippets into new structure
This makes these snippets more independent of each other, isolates
context variables so that it's clear where they're used, and makes the
rules for when to display each snippet part of the view layer instead of
being in the template.

--- a/home/templates/home/dashboard/application_summary.html
+++ b/home/templates/home/dashboard/application_summary.html
@@ -1,3 +1,5 @@
+{% with pending_applications_count=section.pending_applications_count pending_revisions_count=section.pending_revisions_count rejected_applications_count=section.rejected_applications_count approved_applications_count=section.approved_applications_count %}
+
 <h1>Application Status</h1>
 <ul>
 	{% if pending_applications_count %}
@@ -13,3 +15,4 @@
 		<li>No initial applications have been submitted</li>
 	{% endif %}
 </ul>
+{% endwith %}
