--- a/home/templates/home/dashboard/intern.html
+++ b/home/templates/home/dashboard/intern.html
@@ -1,4 +1,4 @@
-{% with my_round=internship.round %}
+{% with internship=section my_round=internship.round %}
 	{% load wagtailcore_tags %}
 	<h1>My Outreachy Internship</h1>
 
