--- a/home/templates/home/dashboard/staff.html
+++ b/home/templates/home/dashboard/staff.html
@@ -1,4 +1,5 @@
-{% include 'home/snippet/dashboard_application_summary.html' %}
+{% with current_round=section.current_round pending_participations=section.pending_participations approved_participations=section.approved_participations participations=section.participations %}
+
 <h1>Email Subscriptions</h1>
 
 <p>
@@ -364,3 +365,4 @@ you can send an email to the announcements mailing list to remind applicants of 
 		</table>
 	{% endwith %}
 {% endif %}
+{% endwith %}
