--- a/home/templates/home/project_channels_form.html
+++ b/home/templates/home/project_channels_form.html
@@ -5,7 +5,7 @@ Add Project Communication Channels
 {% endblock %}
 
 {% block content %}
-<p><a href="{% url 'community-cfp' %}">Timeline, FAQ, & Participating Communities</a> &gt; 
+<p><a href="{% url 'community-cfp' %}">Timeline and FAQ for Outreachy Communities</a> &gt;
 <a href="{% url 'community-landing' round_slug='project.project.round.slug' slug='project.community.slug' %}">{{ project.project_round.community.name }}</a> &gt;
 Submit or edit a Project
 </p>
