Add email for week 5 assignments

--- a/home/templates/home/dashboard/send_email_reminders.html
+++ b/home/templates/home/dashboard/send_email_reminders.html
@@ -90,4 +90,14 @@ you can send an email to the announcements mailing list to remind applicants of 
 </p>
 
 <p><a href="{% url 'email-internship-week-three' %}"><input class="btn btn-success" value="Week 3 Email" /></a>
+
+<hr>
+
+<p>Week 5: Topic is "Think About Your Audience." Start a conversation on the <a href="{{ current_round.week_five_audience_chat_url }}">Outreachy topic URL</a>. Send another blog post prompt:
+<ul>
+	<li>Send the email after {{ current_round.internship_week_five_email_deadline }}.</li>
+</ul>
+</p>
+
+<p><a href="{% url 'email-internship-week-five' %}"><input class="btn btn-success" value="Week 5 Email" /></a>
 {% endwith %}
