Remove & from page

--- a/home/templates/home/travel_stipend.html
+++ b/home/templates/home/travel_stipend.html
@@ -107,7 +107,7 @@ For air travel, please be sure to comply with Conservancy's [[Outreachy/TravelAl
 <<Anchor(receipts)>>
 === Saving receipts ===
 
-You will need to save the receipts for travel to get to your destination, for hotel, and for conference registration. Note that you won't need to provide receipts for meals and other incidental expenses like local transportation that are part of the [[Outreachy/TravelAllowance/ConservancyPolicy#per-diem|Meals & Incidental Expenses per diem amount]]
+You will need to save the receipts for travel to get to your destination, for hotel, and for conference registration. Note that you won't need to provide receipts for meals and other incidental expenses like local transportation that are part of the [[Outreachy/TravelAllowance/ConservancyPolicy#per-diem|Meals and Incidental Expenses per diem amount]]
 
 <<Anchor(scholarships)>>
 == What if my expenses are over $500? ==
@@ -145,7 +145,7 @@ The following receipts are attached for my reimbursement:
 file1 - airfare search screenshot
 file2 - ...
 
-I have not included receipts for things that fall under the Meals & Incidental Expenses per diem amount described on https://wiki.gnome.org/Outreachy/TravelAllowance/ConservancyPolicy#per-diem
+I have not included receipts for things that fall under the Meals and Incidental Expenses per diem amount described on https://wiki.gnome.org/Outreachy/TravelAllowance/ConservancyPolicy#per-diem
 
 [INCLUDE PAYMENT INFORMATION OR WHETHER IT IS OK TO USE THE SAME PAYMENT INFORMATION FROM YOUR INTERNSHIP PAYMENTS.]
 }}}
